[package]
name = "warpgen"
version = "1.0.0"
edition = "2024"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 0
codegen-units = 256

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls","json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
wireguard-keys = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.1"
